--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Front End Developer Course</title>
     </head>
+ 
     <body>
-        <h1>Codeacademy Project</h1>
-        <p>This page is meant to work as a Homepage for future projects.</p>
+        <h1>YOUR NAME</h1>
+        <p>Welcome to my website!</p>
+        <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
     </body>
 </html>
